...
    return projection.focusedIndex.clamp(0, _menuItemCount - 1);
  }

  String _getMenuItemName(int index) {
    switch (index) {
      case 0:
        return 'Печать ценника';
      case 1:
        return 'Доступность';
      case 2:
        return 'Справка';
      case 3:
        return 'Настройки';
...
  @override
  Widget build(BuildContext context) {
    final List<Widget> items = <Widget>[
      Align(
        alignment: Alignment.topCenter,
        child: Text(
          'Меню',
          style: WearTypography.lable15,
          textAlign: TextAlign.center,
        ),
      ),
      WearPill(
        title: 'Печать ценника',
...
