...
              runSpacing: 8,
              alignment: WrapAlignment.center,
              children: <Widget>[
                SizedBox(
                  width: 150,
                  child: WearPill(
                    title: 'Ручной ввод',
                    icon: WearImages.barcode,
                    onTap: _manualInput,
                  ),
                ),
                SizedBox(
                  width: 150,
...
